[gd_scene load_steps=11 format=3 uid="uid://cw2741kmyhe68"]

[ext_resource type="Script" path="res://scripts/player_fps.gd" id="1_sfmll"]
[ext_resource type="Script" path="res://scripts/player/physical_interaction.gd" id="2_3ig20"]
[ext_resource type="Script" path="res://scripts/misc/fps_camera_manager.gd" id="2_bafxf"]
[ext_resource type="Script" path="res://scripts/tools/rayset.gd" id="3_j37np"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kykjl"]
radius = 0.35
height = 1.8

[sub_resource type="SphereMesh" id="SphereMesh_f1i07"]
radius = 0.1
height = 0.215

[sub_resource type="Animation" id="Animation_2oi3x"]
resource_name = "CrouchEnter"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 0.5, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.9, 0), Vector3(0, 0.45, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraRoot:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 0.75, 0)]
}

[sub_resource type="Animation" id="Animation_tq1cl"]
resource_name = "CrouchExit"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 0.5, 1), Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.45, 0), Vector3(0, 0.9, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraRoot:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.75, 0), Vector3(0, 1.5, 0)]
}

[sub_resource type="Animation" id="Animation_ugc2j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.9, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraRoot:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5rnl7"]
_data = {
"CrouchEnter": SubResource("Animation_2oi3x"),
"CrouchExit": SubResource("Animation_tq1cl"),
"RESET": SubResource("Animation_ugc2j")
}

[node name="player_fps" type="CharacterBody3D"]
script = ExtResource("1_sfmll")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_kykjl")

[node name="CameraRoot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="CameraManager" type="Node3D" parent="CameraRoot"]
script = ExtResource("2_bafxf")

[node name="Camera3D" type="Camera3D" parent="CameraRoot/CameraManager"]
fov = 70.0

[node name="PhysicalInteraction" type="Node3D" parent="CameraRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.6, 0)
script = ExtResource("2_3ig20")

[node name="HandManipulationRay" type="RayCast3D" parent="CameraRoot/PhysicalInteraction"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.57248, 0)
target_position = Vector3(0, 0, -2.5)
debug_shape_thickness = 5

[node name="HandManipulationPinPoint" type="Node3D" parent="CameraRoot/PhysicalInteraction"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, -1)

[node name="_Gizmo" type="MeshInstance3D" parent="CameraRoot/PhysicalInteraction/HandManipulationPinPoint"]
visible = false
mesh = SubResource("SphereMesh_f1i07")

[node name="CeilTestRaySet" type="Node3D" parent="CameraRoot/PhysicalInteraction"]
script = ExtResource("3_j37np")

[node name="CeilCheckRay" type="RayCast3D" parent="CameraRoot/PhysicalInteraction/CeilTestRaySet"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 1.572, -0.3)
target_position = Vector3(0, 1, 0)
debug_shape_thickness = 5

[node name="CeilCheckRay2" type="RayCast3D" parent="CameraRoot/PhysicalInteraction/CeilTestRaySet"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 1.572, 0.3)
target_position = Vector3(0, 1, 0)
debug_shape_thickness = 5

[node name="CeilCheckRay3" type="RayCast3D" parent="CameraRoot/PhysicalInteraction/CeilTestRaySet"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.301, 1.572, -0.3)
target_position = Vector3(0, 1, 0)
debug_shape_thickness = 5

[node name="CeilCheckRay4" type="RayCast3D" parent="CameraRoot/PhysicalInteraction/CeilTestRaySet"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.301, 1.572, 0.3)
target_position = Vector3(0, 1, 0)
debug_shape_thickness = 5

[node name="WallTestRaySet" type="Node3D" parent="CameraRoot/PhysicalInteraction"]
script = ExtResource("3_j37np")

[node name="RayCast3D" type="RayCast3D" parent="CameraRoot/PhysicalInteraction/WallTestRaySet"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 1, -0.4)
target_position = Vector3(0, -0.5, -1)

[node name="RayCast3D2" type="RayCast3D" parent="CameraRoot/PhysicalInteraction/WallTestRaySet"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 1, -0.4)
target_position = Vector3(0, -0.5, -1)

[node name="Torch" type="SpotLight3D" parent="CameraRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.32068, -0.5)
light_color = Color(1, 0.85098, 0.756863, 1)
light_energy = 2.0
shadow_enabled = true
spot_range = 15.2369
spot_angle = 32.3109

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5rnl7")
}
